"predeploy" : "npm run build", "deploy" : "gh-pages -d build",

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "author": "ghostb0x",
-  "homepage": "http://ghostb0x.github.io/wordle-clone",
+  "homepage": "http://ghostb0x.github.io/wordle-clone"
   "dependencies": {
     "new-component": "4.0.0",
     "prettier": "^2.6.2",
@@ -17,8 +17,8 @@
     "test": "react-scripts test",
     "new-component": "new-component",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
